chore: open some java modules